tests/transpiler/x/java/pure_global_fold.error
exit status 1
Main.java:4: error: cannot find symbol
        return x + k;
                   ^
  symbol:   variable k
  location: class Main
1 error
